@@ -1,3 +1,9 @@
+2006-08-29  Alexander V. Lukyanov <lav@yars.free.net>
+
+	* FileSet.cc, FileSet.h, MirrorJob.cc, MirrorJob.h, resource.cc:
+	  new mirror option --skip-noaccess and setting mirror:skip-noaccess.
+	  (FileSet::ExcludeUnaccessible) new method.
+
 2006-08-22  Alexander V. Lukyanov <lav@yars.free.net>
 
 	* CmdExec.cc, CmdExec.h, QueueFeeder.h, commands.cc: add settings
